# kde-dev-scripts

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  CMakeLists.txt  Makefile  Makefile.am  README  add_trace.pl  adddebug  addmocincludes  alldcop.rb  astyle-kdelibs  astyle-kdelibs.bat  authors2xml.pl  build-progress.sh  c++-copy-class-and-file  c++-rename-class-and-file  cheatmake  check_licenses  clean-forward-declaration.sh  clean-includes.sh  cmake-dependencies.py  cmakelint.pl  colorcvs  colorcvsrc-sample  colorsvn  create_cvsignore  create_makefile  create_makefiles  create_svnignore  cvs-clean  cvs2dist  cvs2pack  cvs2pack.1  cvs2pack.txt  cvsaddcurrentdir  cvsbackport  cvsblame  (+113 more)
cmake/: README  am2cmake  generate_findpackage_file
cmake-utils/: README
cmake-utils/samples/kcalc/: CMakeLists.txt
cmake-utils/samples/kpager/: CMakeLists.txt
cmake-utils/scripts/: Nightlys-2.6.2  README  am2cmake  gencmake  generate_findpackage_file  replaceinallfiles
completions/: _dcop  _kcmshell  _makeobj
completions/bash/: dcop
completions/zsh/: _dcop  _kcmshell  _kdeinit4_wrapper  _kdeinit_wrapper  _kdekillall
createtarball/: config.ini  create_tarball.rb  create_tarball_kf5.rb
doc/: CMakeLists.txt  Makefile.am  man-adddebug.1.docbook  man-cheatmake.1.docbook  man-create_cvsignore.1.docbook  man-create_makefile.1.docbook  man-create_makefiles.1.docbook  man-cvscheck.1.docbook  man-cvslastchange.1.docbook  man-cvslastlog.1.docbook  man-cvsrevertlast.1.docbook  man-cxxmetric.1.docbook  man-demangle.1.docbook  man-extend_dmalloc.1.docbook  man-extractrc.1.docbook  man-fixincludes.1.docbook  man-po2xml.1.docbook  man-pruneemptydirs.1.docbook  man-qtdoc.1.docbook  man-reportview.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-transxx.1.docbook  man-xml2pot.1.docbook  man-zonetab2pot.py.1.docbook
doc/kdesrc-build/: kdesrc-build.desktop  kdesvn-build.desktop
doc/kdesvn-build/: index.docbook  kdesvn-build.desktop
frameworks/: generate_sieve_rules.sh  mail_framework_maintainers.rb  split_out_frameworks.sh  split_out_kdepim.sh  validate_metainfo.rb
gdb/: README  create-qt5-autoloaders.py  load-qt5printers.py
gdb/qt5printers/: __init__.py  core.py  typeinfo.py
kde-emacs/: HACKING  OTHER_PACKAGES.org  dirvars.el  kdab-qstring.el  kde-emacs-bindings.el  kde-emacs-compat.el  kde-emacs-core.el  kde-emacs-doc.el  kde-emacs-general.el  kde-emacs-grep.el  kde-emacs-semantic.el  kde-emacs-tips.texi  kde-emacs-utils.el  kde-emacs-vars.el  kde-emacs.el  klaralv.el  sourcepair.el
kf5/: adapt-akonadi-includes.pl  adapt_cmakelists_file.pl  adapt_knewstuff3_includes.pl  add_destructor_override.pl  add_missing_kpart_include.pl  bundle_data_files.pl  clean-forward-declaration.sh  clean-includes.sh  cmakelists_install_vars.pl  convert-kabc-to-kcontacts.pl  convert-kaction.pl  convert-kascii.pl  convert-kbuttongroup.pl  convert-kcategorydrawer.pl  convert-kcmdlineargs.pl  convert-kcolordialog.pl  convert-kdebug-with-argument.sh  convert-kdebug.pl  convert-kdialog.pl  convert-kdoublenuminput.pl  convert-kfiledialog.pl  convert-kfontcombobox.pl  convert-kglobal-charset.pl  convert-kglobal-config.pl  convert-kglobal-locale.pl  convert-kglobal-removeAcceleratorMarker.pl  convert-kicon.pl  convert-kimageio.pl  convert-kintnuminput.pl  convert-kintspinbox.pl  convert-kinvokehelp.pl  convert-kjob.pl  convert-klineedit.pl  convert-klistwidget.pl  convert-klocale-formatdate.pl  convert-kmd5.pl  convert-kmenu.pl  convert-kmenubar.pl  convert-kmimetype.pl  convert-kprogressdialog.pl  (+32 more)
kf6/: adapt_buildsystem_latest_kf6.sh  convert-kirigami.sh  port_plasma_kirigami.sh  port_plasma_ksvg.sh  remove_unused_qml_namespace.sh  show_duplicate_import_module.sh
po/ca/docs/scripts/: man-adddebug.1.docbook  man-cheatmake.1.docbook  man-create_cvsignore.1.docbook  man-create_makefile.1.docbook  man-create_makefiles.1.docbook  man-cvscheck.1.docbook  man-cvslastchange.1.docbook  man-cvslastlog.1.docbook  man-cvsrevertlast.1.docbook  man-cxxmetric.1.docbook  man-extend_dmalloc.1.docbook  man-extractrc.1.docbook  man-fixincludes.1.docbook  man-pruneemptydirs.1.docbook  man-qtdoc.1.docbook  man-zonetab2pot.py.1.docbook
po/da/docs/scripts/: man-adddebug.1.docbook  man-cheatmake.1.docbook  man-create_cvsignore.1.docbook  man-create_makefiles.1.docbook  man-cvscheck.1.docbook  man-cvslastchange.1.docbook  man-cvslastlog.1.docbook  man-cvsrevertlast.1.docbook  man-cxxmetric.1.docbook  man-extend_dmalloc.1.docbook  man-extractrc.1.docbook  man-fixincludes.1.docbook  man-pruneemptydirs.1.docbook  man-qtdoc.1.docbook  man-zonetab2pot.py.1.docbook
po/de/docs/scripts/: man-adddebug.1.docbook  man-cheatmake.1.docbook  man-create_cvsignore.1.docbook  man-create_makefile.1.docbook  man-create_makefiles.1.docbook  man-cvscheck.1.docbook  man-cvslastchange.1.docbook  man-cvslastlog.1.docbook  man-cvsrevertlast.1.docbook  (+7 more)
qt4/: Porting  README  adapt-kconfiggroupsaver.pl  adapt-to-icon-spec.py  adapt-to-kde4-api.pl  adapt-to-new-kconfig.pl  adapt-to-new-kconfig2.pl  adapt-to-new-kdebug-api.pl  adapt-to-new-kdelibs-api.pl  adapt-to-qt4-api.pl  adapte-kgroupsaver.pl  adapte-to-kde4-api.pl  adapte-to-new-kdelibs-api.pl  adapte-to-plasma-api.pl  add-customwidget.pl  convert-bad-qdatastream.pl  convert-display.pl  convert-eof.pl  convert-find-to-indexof.pl  convert-kgenericfactory.pl  convert-killtimers.pl  convert-kinstance.pl  convert-kkeydialog.pl  convert-kmimetype-pixmap.pl  convert-kstringhandler.pl  convert-kurl.pl  convert-misc-k3.pl  convert-newq4headers.pl  convert-q3cstring.pl  convert-qboxlayout.pl  convert-qdatastream.pl  convert-qgridlayout.pl  convert-qhbox.pl  convert-qheadsort.pl  convert-qiodevice_at.pl  convert-qlabel.pl  convert-qlayoutparent.pl  convert-qstring.pl  convert-qstringlatin1.pl  convert-qstringlist.pl  (+29 more)
qt4/icons-kde3tokde4-renamer/: actions_remove.txt  actions_rename.txt  apps_remove.txt  apps_rename.txt  devices_remove.txt  devices_rename.txt  icons-kde3to4-renamer.sh  mimetypes_remove.txt  mimetypes_rename.txt  places_remove.txt  places_rename.txt
(+175 files in other folders)
